chore: clean up deprecations and sonar issues