@@ -3,7 +3,7 @@ package gov.utah.dts.openid.controller;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-import java.net.URL;
+import java.net.URI;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -12,7 +12,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
-import org.springframework.boot.web.server.LocalServerPort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
@@ -20,12 +19,12 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 @ExtendWith(SpringExtension.class)
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @ActiveProfiles("test")
-public class HomeControllerIT {
+class HomeControllerIT {
 
-	@LocalServerPort
+	@Value(value="${local.server.port}")
 	private int port;
 
-	private URL base;
+	private URI base;
 
 	@Value("${server.servlet.contextPath}")
 	protected String contextPath;
@@ -34,13 +33,13 @@ public class HomeControllerIT {
 	private TestRestTemplate template;
 
 	@BeforeEach
-	public void setUp() throws Exception {
-		this.base = new URL("http://localhost:" + port + contextPath+ "/");
+	void setUp() throws Exception {
+		this.base = new URI("http://localhost:" + port + contextPath + "/");
 	}
 
 	@Test
-	public void getHello() throws Exception {
-		ResponseEntity<String> response = template.getForEntity(base.toString(), String.class);
+	void getHello() {
+		ResponseEntity<String> response = template.getForEntity(base, String.class);
 		assertThat(response.getBody(), containsString("App version:"));
 	}
 }
